--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next build && next export"
   },
   "dependencies": {
     "frontmatter-markdown-loader": "^1.8.0",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.0.3",
+    "node-fetch": "^2.6.0",
     "react": "16.9.0",
     "react-dom": "16.9.0"
   }
