--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -13,8 +13,14 @@ collections:
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Date", name: "date", widget: "datetime" }
-      - { label: "Description", name: "description", widget: "string" }
-      - { label: "Body", name: "body", widget: "markdown" }
+      - { label: "Description", name: "description", widget: "string" }      
+      - label: 'Events'
+        name: "events"
+        widget: list
+        fields: 
+          - { label: "Name", name: "name", widget: "string"}
+          - { label: "Description", name: "description", widget: "text"}
+          - { label: "Body", name: "body", widget: "markdown" }
   - name: "pages"
     label: "Pages"
     files:
