--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,24 +3,7 @@ backend:
   branch: master
 media_folder: static/img
 collections:
-  - name: "event"
-    label: "Events"
-    folder: "content/events/event.md"
-    create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
-    editor:
-     preview: false
-    fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Date", name: "date", widget: "datetime" }
-      - { label: "Description", name: "description", widget: "string" }      
-      - label: 'Events'
-        name: "events"
-        widget: list
-        fields: 
-          - { label: "Name", name: "name", widget: "string"}
-          - { label: "Description", name: "description", widget: "text"}
-          - { label: "Body", name: "body", widget: "markdown" }
+  
   - name: "pages"
     label: "Pages"
     files:
@@ -37,3 +20,17 @@ collections:
           fields: 
             - { label: "Name", name: "name", widget: "string"}
             - { label: "Description", name: "description", widget: "text"}
+    - name: "event"
+      label: "Events"
+      file: "content/events/event.md"
+      fields:
+        - { label: "Title", name: "title", widget: "string" }
+        - { label: "Date", name: "date", widget: "datetime" }
+        - { label: "Description", name: "description", widget: "string" }      
+        - label: 'Events'
+          name: "events"
+          widget: list
+          fields: 
+            - { label: "Name", name: "name", widget: "string"}
+            - { label: "Description", name: "description", widget: "text"}
+            - { label: "Body", name: "body", widget: "markdown" }
