--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "next": "9.0.3",
     "node-fetch": "^2.6.0",
     "react": "16.9.0",
-    "react-dom": "16.9.0"
+    "react-dom": "16.9.0",
+    "react-markdown": "^4.1.0"
+  },
+  "devDependencies": {
+    "prettier": "1.18.2"
   }
 }
